# writequit

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  bun.lockb  eslint.config.js  generateKeys.mjs  opencode.json  package.json  svelte.config.js  tsconfig.base.json
apps/desktop/: package.json  svelte.config.js  vite.config.ts
apps/desktop/src/: app.d.ts  app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  storage.rs
apps/web/: package.json
apps/web/convex/: README.md  admin.ts  auth.config.ts  invoices.ts  tags.ts  tasks.ts  tsconfig.json
apps/web/src/: app.html
convex/: admin.ts  apiKeys.ts  auth.ts  boards.ts  crons.ts  http.ts  invoices.ts  mcp.ts  notifications.ts  schema.ts  sessions.ts  tags.ts  tasks.ts  users.ts
convex/_generated/: api.d.ts
screenshots/: README.md
src/: app.html
src/lib/auth/: client.svelte.ts  index.ts
src/lib/components/: ApiKeysSection.svelte  AvatarMenu.svelte  CommandPalette.svelte  StatusBar.svelte
src/lib/parser/: dueDate.ts  index.ts  timeRange.ts  title.ts  types.ts
src/lib/server/: convex.ts
src/lib/stores/: commandPalette.svelte.ts  settings.svelte.ts  usePaginatedQuery.svelte.ts
src/lib/utils/: commands.ts  datetime.ts  invoicePdf.ts  preload.ts  reportPdf.ts  taskSort.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte  layout.css
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/app/: +error.svelte  (+4 more)
static/: robots.txt
(+79 files in other folders)
