[package]
name = "writequit-desktop"
version = "0.0.1"
edition = "2021"

[lib]
name = "writequit_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
dirs = "6"
chrono = "0.4"
slug = "0.1"
